--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
     <div id="circle"></div>
-    <div id="background"></div>
+    <div id="background">
+        <div id="wrapper">
+            <h1>JL</h1>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
